--- a/index.html
+++ b/index.html
@@ -73,11 +73,15 @@
                     <div class="section-inner shadow-sm rounded">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Senior Frontend Developer with 7+ years of experience specializing in React, TypeScript,
-                                and Next.js development. Proficient in creating responsive, user-centric interfaces and
-                                optimizing frontend performance. Strong advocate for best practices in testing, design,
-                                and observability. Experienced in collaborating with cross- functional teams and
-                                mentoring junior developers </p>
+                            <p>Experienced Senior Frontend Engineer with over 7 years in developing decentralized
+                                applications in the Web3
+                                space. Proficient in React, TypeScript, and JavaScript, focusing on user-centric
+                                interfaces for DeFi and NFT
+                                platforms. Skilled in integrating smart contracts and optimizing performance to enhance
+                                user engagement.
+                                Committed to delivering high-quality features and improving the developer experience
+                                within the Web3
+                                ecosystem. </p>
 
                         </div><!--//content-->
                     </div><!--//section-inner-->
